style.css
/* ... */
#block-commerce-checkout-progress-indication .art-block ul>li:before,
#block-commerce-cart-cart .art-block ul>li:before {
   content: "";
}

#block-commerce-checkout-progress-indication ul.inline li,
#block-commerce-checkout-progress-indication ul.links.inline li,
#block-commerce-cart-cart ul.inline li,
#block-commerce-cart-cart ul.links.inline li {
  display: list-item;
  text-align: center;
  list-style-image: url('images/bicycle-bullet.png');
  list-style-position: inside;
}

#block-commerce-checkout-progress-indication ul.inline li,
#block-commerce-checkout-progress-indication ul.links.inline li {
  display: list-item;
  text-align: left;
  list-style-image: url('images/bicycle-bullet.png');
  list-style-position: outside;
}

#block-commerce-cart-cart ul.inline li a,
#block-commerce-cart-cart ul.links.inline li a {
  color: red;
  font-weight: bold;
  font-style: italic;
}

#block-commerce-checkout-progress-indication ul.inline li.active.cart,
#block-commerce-checkout-progress-indication ul.links.inline li.active.cart {
  color: red;
  font-weight: bold;
  font-style: italic;
}

form#views-form-commerce-cart-form-default input {
  text-align: center;
}

form#views-form-commerce-cart-form-default a {
  text-decoration: none;
}

form#commerce-checkout-form-checkout input.art-button,
form#commerce-checkout-form-review input.art-button,
form#views-form-commerce-cart-form-default input.art-button {
  margin-left: 1em;
  margin-right: 1em;
}

form#commerce-checkout-form-checkout table td {
  text-align: center;
}

fieldset#edit-buttons.checkout-buttons.form-wrapper {
  text-align: center;
}

.checkout-buttons .checkout-cancel:focus,
.checkout-buttons .checkout-back:focus,
.checkout-buttons .checkout-cancel:hover,
.checkout-buttons .checkout-back:hover {
  padding: 4px 6px;
}

#edit-commerce-payment-payment-method img {
  margin: 0;
  border-style: none;
}

/* Styling for Classifed Ads */

table.classified-term-list {
  width: 60%;
  margin-right: auto;
  margin-left: auto;
}

table.classified-term-list td {
  text-align: center;
}

div.node-classified div.art-article {
  width: 80%;
  margin-right: auto;
  margin-left: auto;
}
/* Styling for Selecting other Users by Address View */
div.view-list-members-with-matching-address fieldset#edit-select.container-inline.collapsible.form-wrapper.collapse-processed {
  border-style: none;
  text-align: center;
}

div.view-list-members-with-matching-address fieldset#edit-select.container-inline.collapsible.form-wrapper.collapse-processed .fieldset-legend {
  display: none;
}

.page-matching-addresses-1-yr-2-member div.breadcrumb.art-postcontent,
.page-matching-addresses-1-yr-3-member div.breadcrumb.art-postcontent,
.page-matching-addresses-2-yr-2-member div.breadcrumb.art-postcontent,
.page-matching-addresses-2-yr-3-member div.breadcrumb.art-postcontent,
.page-matching-addresses-3-yr-2-member div.breadcrumb.art-postcontent,
.page-matching-addresses-3-yr-3-member div.breadcrumb.art-postcontent {
  display: none;
}

/* Styling for Simple Ads Review Page*/

div.field-name-field-ad-image,
div.field-name-field-ad-extra-text {
  text-align: center;
}

div.field-name-field-ad-image img {
  border-style: none;
}

/* Styling for SimpleAds Top Block */

div.simplead-container {
  text-align: center;
  font-weight: bold;
  vertical-align:middle;
  height: auto;
  width: 100%;
  overflow: hidden;
  display: table-cell;
}

div.simplead-container img {
  width: 100%;
}

div.simplead-container p {
  line-height: normal;
  font-size: .85em;
}

/*Styling for Forums */
tr.even td.forum-list-icon-default .forum-list-icon-wrapper span,
tr.odd td.forum-list-icon-default .forum-list-icon-wrapper span,
.forum-list-icon-legend .forum-list-icon-default {
  background: transparent url(images/MHCClogo2-forum-default.png) no-repeat center center;
}

tr.even td.forum-list-icon-new-posts .forum-list-icon-wrapper span,
tr.odd td.forum-list-icon-new-posts .forum-list-icon-wrapper span,
.forum-list-icon-legend .forum-list-icon-new-posts {
  background: transparent url(images/MHCClogo2-forum_new_posts.png ) no-repeat center center;
}

img.print-icon {
  border-style: none;
  margin-right: .5em;
}

div.forum-post-links {
  line-height: 2em;
  margin: -5px 0 5px 5px;
}

div.forum-post-links ul.links.inline li {
  line-height: 1%;
}

.af-button-large,
.af-button-small,
.author-pane-link {
  margin-left: .5em;
  margin-right: .5em;
}

div.feed-icon img {
  border-style: none;
}

.header-inner {
  margin: 0 auto;
  display: table;
  text-align: center;
}

.region-top,
.region-bottom {
  display: table;
  width: 100%;
}

.region-top > *,
.region-bottom > * {
  float: left;
}

@media screen and (max-width: 678px) {
  .region-top > *,
  .region-bottom > * {
    float: none;
    width: 100%;
  }

  div.region.region-top1 div.art-block,
  div.region.region-top2 div.art-block,
  div.region.region-top3 div.art-block {
    height: auto;
  }

  div.region.region-top1 div.art-blockcontent,
  div.region.region-top2 div.art-blockcontent {
    min-height: 0px;
  }
}

.adslist {
  display: table;
  margin: 0 auto;
}

.view-id-front_page_slideshow .views-slideshow-pager-fields img {
  max-width: 100%;
  max-height: 100%;
  margin: 0;
  width: 100%;
  height: auto;
  margin-bottom: 8.5px;
}

.view-id-front_page_slideshow .views-slideshow-pager-fields div {
  display: block;
}

.view-id-front_page_slideshow .views-slideshow-pager-fields .active img {
  border: 2px solid #9cc3d7;
}

.page-about-mhcc-rides-starting-locations .views-submit-button {
  display: inline-block;
}
.page-about-mhcc-rides-starting-locations .views-submit-button .form-submit {
  float: left;
}
.page-about-mhcc-rides-starting-locations .views-submit-button .ajax-progress {
  float: left;
}
.page-about-mhcc-rides-starting-locations .views-reset-button {
  float: right;
}

